Se añadió las funcionalidades de usuario.